<resources>
    <string name="app_name">Ceep</string>
    <string name="titulo">Título</string>
    <string name="descricao">Descrição</string>
    <string name="inserir_uma_nota">Inserir uma nota</string>
    <string name="salvar_nota">Salvar Nota</string>
    <string name="alterar_para_grade">Alterar para grade</string>
    <string name="alterar_para_lista">Alterar para lista</string>
    <string name="feedback">Feedback</string>
    <string name="deixe_o_seu_feedback">Deixe o seu feedback! :)</string>
    <string name="email">E-mail</string>
    <string name="escreva_seu_feedback">Escreva seu feedback</string>
    <string name="mensagem_feedback">Envie dúvidas ou sugestões sobre sua experiência com o Ceep. Usaremos as informações fornecidas para aprimorar a experiência da App.</string>
    <string name="enviar">Enviar</string>
    <string name="banner">Banner</string>
    <string name="logo">Logo</string>
</resources>
